# colcon-notification

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  setup.py  stdeb.cfg
colcon-terminal-notifier.app/Contents/: Info.plist
colcon_notification/desktop_notification/: __init__.py  notify2.py  notify_send.py  terminal_notifier.py  win32.py
colcon_notification/event_handler/: status.py  terminal_title.py
colcon_notification/event_handler/desktop_notification/: __init__.py
debian/patches/: setup.cfg.patch
test/: spell_check.words  test_flake8.py  test_spell_check.py  test_status_event_handler.py
