[metadata]
name = colcon-notification
version = attr: colcon_notification.__version__
url = https://colcon.github.io
download_url = https://github.com/colcon/colcon-notification/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to provide status notifications.
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
tests_require =
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = false

[options.entry_points]
colcon_core.event_handler =
    desktop_notification = colcon_notification.event_handler.desktop_notification:DesktopNotificationEventHandler
    status = colcon_notification.event_handler.status:StatusEventHandler
    terminal_title = colcon_notification.event_handler.terminal_title:TerminalTitleEventHandler
colcon_core.extension_point =
    colcon_notification.desktop_notification = colcon_notification.desktop_notification:DesktopNotificationExtensionPoint
colcon_notification.desktop_notification =
    notify_send = colcon_notification.desktop_notification.notify_send:NotifySendDesktopNotification

[options.package_data]
colcon_notification.desktop_notification.image = *.ico
