[metadata]
name = colcon-notification
version = attr: colcon_notification.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-notification/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-notification/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to provide status notifications.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core>=0.3.7
  notify2; sys_platform == 'linux'
  pywin32; sys_platform == 'win32'
packages = find:
zip_safe = false

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[options.data_files]
# distutils replaces dashes in keys with underscores
share/colcon_notification/colcon-terminal-notifier.app/Contents =
    colcon-terminal-notifier.app/Contents/Info.plist
    colcon-terminal-notifier.app/Contents/PkgInfo
share/colcon_notification/colcon-terminal-notifier.app/Contents/MacOS =
    colcon-terminal-notifier.app/Contents/MacOS/colcon-terminal-notifier
share/colcon_notification/colcon-terminal-notifier.app/Contents/Resources =
    colcon-terminal-notifier.app/Contents/Resources/colcon.icns
share/colcon_notification/colcon-terminal-notifier.app/Contents/Resources/en.lproj =
    colcon-terminal-notifier.app/Contents/Resources/en.lproj/Credits.rtf
    colcon-terminal-notifier.app/Contents/Resources/en.lproj/InfoPlist.strings
    colcon-terminal-notifier.app/Contents/Resources/en.lproj/MainMenu.nib

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:pkg_resources is deprecated as an API::flake8_import_order
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:The 'asyncio_mode' default value will change to 'strict' in future:DeprecationWarning:pytest
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-notification

[options.entry_points]
colcon_core.event_handler =
    desktop_notification = colcon_notification.event_handler.desktop_notification:DesktopNotificationEventHandler
    status = colcon_notification.event_handler.status:StatusEventHandler
    terminal_title = colcon_notification.event_handler.terminal_title:TerminalTitleEventHandler
colcon_core.extension_point =
    colcon_notification.desktop_notification = colcon_notification.desktop_notification:DesktopNotificationExtensionPoint
colcon_notification.desktop_notification =
    notify_send = colcon_notification.desktop_notification.notify_send:NotifySendDesktopNotification
    notify2 = colcon_notification.desktop_notification.notify2:Notify2DesktopNotification
    terminal_notifier = colcon_notification.desktop_notification.terminal_notifier:TerminalNotifierDesktopNotification
    win32 = colcon_notification.desktop_notification.win32:Win32DesktopNotification

[options.package_data]
colcon_notification.desktop_notification.image = *.ico

[flake8]
import-order-style = google

[coverage:run]
source = colcon_notification
